 Bug 536344 -  posinset and setsize aren't calculated right for the flatter trees, r=marcoz, davidb